# autodrive_perception

./: README.md  pyproject.toml
notebook/: argparser-note.py
oumuamua/: eval.py  infer.py  onnx_export.py  train.py
perception_tools/: _version.py  main.py
perception_tools/utils/: global_config.py
